fix style on mobile

--- a/static/style.css
+++ b/static/style.css
@@ -1,6 +1,7 @@
 body {
     max-width: 80ch;
     margin: auto;
+    padding: 1em;
 }
 
 a {
